-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0, 5.7.0 Alpha
-
None
If one accidentally calls a property as a function, the following assert is triggered:
ASSERT: "isObject()" in file /home/blubb/dev/qt/5.6/qtdeclarative/src/qml/jsruntime/qv4value.cpp, line 150
Example:
import QtQuick 2.4 import QtQuick.Window 2.2 Window { visible: true MouseArea { id: mouseArea anchors.fill: parent onClicked: { if (!containsMouse()) // this should read (containsMouse) instead! console.log("impossible!"); Qt.quit(); } } }
For Gerrit Dashboard: QTBUG-52340 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
157520,2 | Fix crash when trying to call a property of the scope or context object | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |